--- a/styles/assignment-one.css
+++ b/styles/assignment-one.css
@@ -40,18 +40,29 @@ font-family: 'Open Sans', sans-serif;
 /* section two styles */
 .section-two{
  display: flex;
- margin:x;
- align:center;
+ align-items: center;
+ padding-left: 222px;
+ padding-right: 306px;
+
+ 
+ 
 }
 
 .right{
-  font-size: 30px;
-  font-weight: 240px;
-
+  padding-left: 50px;
+  padding-top: 200px;
 
 }
 .right-title{
-  font-size: 40px;
+  color: #151414;
   font-weight: 700;
-  padding-top: 80px;
+  font-size: 40px;
+  padding-bottom: 24px;
+ 
+}
+.right-title-details{
+padding-bottom: 16px;
+}
+.icon{
+  padding: 6px;
 }
