--- a/styles/assignment-one.css
+++ b/styles/assignment-one.css
@@ -185,12 +185,12 @@ input{
   border-radius: 5px;
 }
 .contact-button{
-  color: #ffff;
+  color:blue;
   border: none;
   font-weight: 600;
   font-size: 20px;
   border-radius: 5px;
-  background: blue;
+  background: white;
   padding: 20px 36px;
 
 
